# giancarlo

./: README.md  myst.yml  pyproject.toml
.github/workflows/: docs.yml  test.yml
examples/: rimom.ipynb  tau.ipynb
giancarlo/: __init__.py  algebra.py  draw.py  manipulate.py  qft.py  utils.py  wick.py
logo/: logo.xml
tests/: test_cnumber_symbol.py  test_scalar.py
tutorials/: basics.ipynb  fermions.ipynb  four-quark.ipynb  hvp.ipynb  quarks.ipynb  rimom.ipynb  scalars.ipynb  symbols.ipynb
